Fixed text wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,8 @@ main {
 
 .post__body p,
 .comment__body p {
-  white-space: pre;
+  white-space: pre-wrap;
+  margin: 0;
 }
 
 .post .media {
